change calender for current month

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
-	<script type="module" src="./js/index.js" defer></script>
+	<script type="text/javascript" src="./js/index.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
