Add current month name

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-	<div id="app-calendar">
-		
-	</div>
+	<div id="month-name"></div>
+	<div id="app-calendar"></div>
 </body>
 </html>
