--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-	<div id="month-name"></div>
+	<div class="header">
+		<div id="previous" class="shift"><a href="#" onclick="return false;"><h3>previous</h3></a></div>
+		<div id="month-name" class="month-name"></div>
+		<div id="future" class="shift"><a href="#" onclick="return false;"><h3>future</h3></a></div>
+	</div>
 	<div id="app-calendar"></div>
 </body>
 </html>
