debug weekend finder

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-	<div class="header">
-		<div id="previous" class="shift"><a href="#" onclick="return false;"><h3>previous</h3></a></div>
-		<div id="month-name" class="month-name"></div>
-		<div id="future" class="shift"><a href="#" onclick="return false;"><h3>future</h3></a></div>
+	<div class="root">
+		<div class="header">
+			<div id="previous" class="shift"><a href="#" onclick="return false;"><h3>previous</h3></a></div>
+			<div id="month-name" class="month-name"></div>
+			<div id="future" class="shift"><a href="#" onclick="return false;"><h3>future</h3></a></div>
+		</div>
+		<div class="content">
+			<div id="app-calendar"></div>
+		</div>
 	</div>
-	<div id="app-calendar"></div>
 </body>
 </html>
